# wifihostB

./: .gitignore  README.md  cmake_install.cmake  config.env  esp-idf-vscode-generated.gdb  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  partitions.csv  project_description.json  sdkconfig  sdkconfig.old
bootloader-prefix/src/bootloader-stamp/: bootloader-source_dirinfo.txt
bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
main/: CMakeLists.txt  fat.cpp  fat.hpp  main.cpp  mem.cpp  mem.hpp  minmax.hpp  nonCopyAble.hpp  nvs.hpp  pwm.cpp  pwm.hpp  stringCompare.cpp  stringCompare.hpp  tempture.cpp  tempture.hpp  vfs.hpp  wifi.cpp  wifi.hpp
main/server/: http.cpp  mDns.cpp  mDns.hpp  server.cpp  socketStream.cpp  socketStreamWindow.cpp
main/server/api/: api.cpp
main/server/buildinHtml/: file.hpp  file.html
main/server/head/: http.hpp  server.hpp  socketStream.hpp  socketStreamWindow.hpp
main/server/html/: file.html  light.hpp  light.html
web/: index.css  index.html
web/light/: light.html  light.js
web/server/: server.html  server.js  temperature.js
web/temperature/: temperature.html  temperature.js
web/wifi/: wifi.html  wifi.js
