idf_component_register(SRCS "pwm.cpp" "tempture.cpp" "main.cpp" "wifi.cpp" "fat.cpp" "mem.cpp" "stringCompare.cpp"
                    "server/socketStream.cpp" "server/http.cpp" "server/server.cpp" "server/mDns.cpp" "server/socketStreamWindow.cpp"
                    "server/api/api.cpp"
                    INCLUDE_DIRS "." "./server/head")
